--- a/racingcar.html
+++ b/racingcar.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><meta charset="UTF-8"><title>Mini Racing Car</title><link rel="stylesheet" href="../styles.css" /></head>
+<head>
+  <meta charset="UTF-8">
+  <title> Mini Racing Car</title>
+  <link rel="stylesheet" href="../styles.css" />
+</head>
+
 <body class="container">
-  <h1>🏎️ Mini Racing Car</h1>
+  <h1> Mini Racing Car</h1>
+  <img src="car.jpg" alt="Mini Racing Car photo">
   <p><strong>Technologies:</strong> Arduino, ESP8266, DRV8833</p>
   <p><strong>Date:</strong> Sept 2025</p>
   <p>Miniature Wi-Fi-controlled car with dual motor driver. Wrote C++ firmware, soldered circuits, and iteratively tested under tight time constraints.</p>
-  <a href="../index.html">⬅ Back to Main Site</a>
+  <p><a href="../index.html">⬅ Back to Main Site</a></p>
 </body>
 </html>
