--- a/404.html
+++ b/404.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,25 +8,23 @@
     <link rel="icon" type="image/png" href="favicon.png">
     <style>
         body {
-            color: #333;
-            background: #f8f8fa;
+            color: #333; background: #f8f8fa;
+            font-family: sans-serif;
             max-width: 600px;
-            padding: 1em 1ch;
-            margin: auto;
+            padding: 1em 1ch; margin: auto;
         }
-        a { color: #7a59c1; text-decoration: none; }
+        header, footer { background-color: #dae7ff; }
+        a { color: #48679f; font-weight: bold; }
         a:hover { text-decoration: underline; }
         code { background-color: whitesmoke; }
         img, video { max-width: 100%; }
-        @media (prefers-color-scheme: light) {
-            body { color: #e0e0e8; background-color: #131320; }
-            a { color: #b39ddb; }
-        }
     </style>
 </head>
 <body>
     <header><a href=/>Shriya Tyagi</a></header>
+    <hr>
     <main></main>
+    <hr>
     <footer>&copy; 2025 Shriya Tyagi (🪿🪿, honk!)</footer>
     <script>
         // uses marked.min.js (https://github.com/markedjs/marked) by Christopher Jeffrey under MIT License
