--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
             padding: 1em 1ch; margin: auto;
         }
         header, footer { background-color: #dae7ff; }
-        header, footer, h1 { text-align: center; }
+        header, footer, h1, h2 { text-align: center; }
         a { color: #48679f; font-weight: bold; }
         a:hover { text-decoration: underline; }
         code { background-color: whitesmoke; }
