--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Shriya Tyagi</title>
-    <link rel="apple-touch-icon"ssizes="180x180" href="apple-icon.png">
+    <link rel="apple-touch-icon"sizes="180x180" href="apple-icon.png">
     <link rel="icon" type="image/png" href="favicon.png">
     <style>
         body {
@@ -22,7 +22,7 @@
     </style>
 </head>
 <body>
-    <header><a href=/>Shriya Tyagi</a></header>
+    <header><h1><a href=/>Shriya Tyagi</a></h1></header>
     <hr>
     <main></main>
     <hr>
